# econ-project

./: .gitignore  DEMO_README.md  README.md  fix-quarantine.sh  index.html  package-lock.json  package.json  playwright.config.ts  prd.md  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: architecture.md  current-fcf-yield-design.md  current-fcf-yield-prd.md  current-fcf-yield-techspec.md  followup.md  prd.md  tech_spec.md
playwright-report/: index.html
scripts/: build-docs-mermaid.sh  build-docs.sh  mermaid-pre.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: V1__initial.sql
src-tauri/src/derived/: mod.rs  series.rs
src-tauri/src/domain/: company.rs  event.rs  fact.rs  filing.rs  ids.rs  lineage.rs  metric.rs  mod.rs  period.rs
src-tauri/src/ipc/: commands.rs  mod.rs  state.rs
src-tauri/src/normalize/: concept_map.rs  mod.rs  periods.rs
src-tauri/src/pipeline/: mod.rs  orchestrator.rs
src-tauri/src/repos/: company.rs  current_price.rs  derived_metric.rs  filing.rs  historical_price.rs  ingestion_event.rs  mod.rs  normalized_fact.rs  period.rs  raw_fact.rs
src-tauri/src/sources/: companyfacts.rs  item_4_02.rs  market_data.rs  mod.rs  sec_client.rs  submissions.rs  tickers.rs
src-tauri/tests/: integration_apple.rs  integration_baba_live.rs  integration_derived_metrics.rs  integration_lulu_live.rs  integration_market_cap_live.rs  integration_multi.rs  refresh_wfc_prod_db.rs
(+30 files in other folders)
